# isA_Chain

./: .env.example  .gitignore  BLOCKCHAIN_INTEGRATION_ARCHITECTURE.md  Cargo.toml  PROJECT.md  README.md  docker-compose.yml  hardhat.config.js  package-lock.json  package.json  tsconfig.json
contracts/: SimpleToken.sol
contracts/abi/: Address.json  Context.dbg.json  ECDSA.json  ERC165Checker.json  ERC20.json  ERC721.json  ERC721Pausable.dbg.json  IERC165.dbg.json  IFlashLoanReceiver.json  ISANFT.json  ISAToken.json  IVerifier.json  LendingProtocol.json  Math.json  MerkleProof.dbg.json  MerkleProof.json  NFTMarketplace.json  OrderManager.json  PriceOracle.json  PrivacyPool.dbg.json  PrivacyPool.json  SafeCast.json  SafeERC20.json  SimpleDEX.json  SimpleToken.dbg.json  SimpleToken.json  SpotExchange.dbg.json  SpotExchange.json  StakingPool.json  Strings.json  YieldFarming.json
contracts/rust/: advanced_token.rs
contracts/solidity/defi/: SimpleDEX.sol  YieldFarming.sol
contracts/solidity/exchange/: OrderManager.sol
contracts/solidity/nft/: ISANFT.sol
contracts/solidity/oracle/: PriceOracle.sol
contracts/solidity/privacy/: PrivacyPool.sol
contracts/src/DeFi/: LendingProtocol.sol  StakingPool.sol
contracts/src/Exchange/: SpotExchange.sol
contracts/src/NFT/: NFTMarketplace.sol
contracts/src/Tokens/: ISAToken.sol
contracts_backup/: hardhat.config.js  package.json
contracts_backup/contracts/defi/: LendingProtocol.sol  SimpleDEX.sol  StakingPool.sol  YieldFarming.sol
contracts_backup/contracts/exchange/: OrderManager.sol  SpotExchange.sol
contracts_backup/governance/: ISAGovernor.sol
contracts_backup/scripts/: deploy.js
core/blockchain/: Cargo.toml  Dockerfile
core/blockchain/examples/: send_transaction.rs
core/blockchain/src/: account.rs  agent_registry.rs  agent_token.rs  agent_wallet.rs  balance_sync.rs  batch_settlement.rs  billing.rs  block.rs  blockchain.rs  budget.rs  channel.rs  compute_market.rs  compute_subnet.rs  consensus.rs  credit_billing.rs  credit_bridge.rs  credits.rs  cross_chain.rs  crypto.rs  deposit.rs  emission.rs  error.rs  fee_routing.rs  finality.rs  genesis.rs  governance.rs  incentives.rs  lib.rs  mempool.rs  metrics.rs  network.rs  node.rs  oracle.rs  p2p.rs  pos.rs  quality.rs  reputation.rs  sdk_types.rs  settlement.rs  settlement_bridge.rs  (+15 more)
core/blockchain/src/rpc/: handlers.rs  mod.rs  server.rs  types.rs
core/blockchain/tests/: blockchain_persistence_test.rs  load_test.rs  security_test.rs  smoke_test.rs
deployment/: README.md
deployment/helm/: values-production.yaml  values-staging.yaml  values.yaml
deployment/k8s/: blockchain-pvc.yaml
deployment/scripts/: build.sh
docs/: PRD.md  api-reference.md  concepts.md  configuration.md  deployment.md  environment.md  examples.md  features.md  index.md  installation.md  product.md  project-status.md  quickstart.md  services-readme.md  support.md  testing.md
docs/adr/: 0001-metrics-only-observability.md
docs/api-reference/: api.md  defi-service.md  nft-service.md  tools-service.md
docs/architecture/: README.md  hybrid-service-architecture.md  service-implementation-guide.md
docs/blockchain/: isachain-architecture.md
docs/operations/: service-management.md
docs/technical/: architecture.md
docs/whitepaper/: blockchain_design.md
scripts/: deploy.js  start-services.sh
services/defi-api/: README.md  package-lock.json  package.json  tsconfig.json
services/mcp-bridge/: package.json
services/nft-api/: package-lock.json  package.json
services/tools-api/: package-lock.json  package.json  tsconfig.json
test/: ISANFT.test.js  NFTMarketplace.test.js  SimpleDEX.test.js
tests/contracts/: ISAToken.test.js  SimpleToken.test.js
wallet/core/: Cargo.toml
wallet/core/src/: account.rs  address_derivation.rs  crypto.rs  error.rs  hardware.rs  keystore.rs  lib.rs  mnemonic.rs  rpc_client.rs  storage.rs  transaction.rs  wallet.rs
(+37 files in other folders)
