[workspace]
resolver = "2"
members = [
    "core/blockchain",
    "wallet/core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["isA_Chain Team <team@isa-chain.io>"]
license = "MIT"
repository = "https://github.com/yourusername/isA_Chain"
homepage = "https://isa-chain.io"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
ed25519-dalek = "2.0"
secp256k1 = { version = "0.28", features = ["recovery"] }
ring = "0.17"

# Networking
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "kad"] }
reqwest = { version = "0.11", features = ["json"] }

# Storage
rocksdb = "0.21"
sled = "0.34"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# WebAssembly
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

# Zero-knowledge proofs
ark-std = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-bn254 = "0.4"

# Testing
criterion = "0.5"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.test]
opt-level = 0
debug = true